--- a/dashboard.html
+++ b/dashboard.html
@@ -372,7 +372,7 @@
 
     function logout() {
       localStorage.clear();
-      window.location.href = '';
+      window.location.href = 'index.html';
     }
 
     loadBooks();
